resources/css/sass/pages/_header.scss
@use '../abstracts' as *;

    .header-wrapper {
        max-width: 100vw;
        display: initial;
        z-index: 1;

        .logo-wrapp {
            max-height: 100px;
            max-width: 100vw;
            background: white;
            z-index: 1;
            display: grid;
            overflow: hidden;
            place-items: center;

            &.mobile{
                display: none;
            }

            img {
                display: block;
                height: 100px;
            }
        }

        .links-wrapper {
            width: 100%;
            max-width: 100vw;
            display: grid;
            place-items: center;
            height: 50px;
            background: #ebebeb;
            position: sticky;
            z-index: 1;
            top: 0;

            .links {
                width: 100%;
                max-width: 1200px;
                display: flex;
                align-items: center;
                justify-content: space-between;

                a {
                    text-decoration: none;
                    color: $dark-gray;
                    font-size: 20px;

                    &.highlighted{
                        color: $blue;
                        font-size: 15px;
                        margin-right: -10px;
                        padding-top: 8px;
                        text-transform: uppercase;
                        font-family: 'Helvetica Neue';
                    }

                    &:hover {
                        color: $red;
                    }

                    &.active {
                        color: $red;
                        pointer-events: none;
                    }
                }
            }
        }

        .mobile-underheader {
            display: none;
            z-index: 1;
            background: white;
            width: 100%;
            height: 50px;
            border-bottom: 1px solid $mid-gray;
            position: relative;
            place-items: center;

            .mobile-button {
                position: absolute;
                height: 100%;
                width: 50px;
                right: 0;
                display: flex;
                justify-content: center;
                align-items: center;
                flex-direction: column;
                gap: 5px;

                .button {
                    height: 2px;
                    width: 30px;
                    background: $dark-gray;
                    position: relative;
                    transform-origin: center;
                    transition: .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
                    transition-property: transform, opacity;

                    &.open-left{
                        transform: rotate(45deg);
                        top:6px;
                        
                    }
                    &.open-middle{
                        opacity: 0;
                        
                    }
                    &.open-right{
                        transform: rotate(-45deg);
                        top: -8px;
                    }
                }
            }

            h1 {
                font-family: 'Helvetica Neue';
                font-size: 20px;
                text-transform: uppercase;
                margin-top: 8px;
            }
        }
    }

    #mobile-menu {
        display: none;
        transform: translateX(100%);
        display: block;
        z-index: 4;
        position: fixed;
        top: 100px;
        height: calc(100vh - 150px);
        width: 100%;
        background: white;
        transition: 0.3s ease-out;

        &.open {
            transform: translateX(0%);
        }

        .links {
            width: 100%;
            display: flex;
            flex-direction: column;
            gap: 30px;
            padding-left: 30px;
            padding-top: 30px;

            a {
                text-decoration: none;
                color: $dark-gray;
                font-size: 20px;
                &.highlighted{
                    color: $blue;
                    margin-right: -10px;
                    padding-top: 8px;
                    text-transform: uppercase;
                    font-size: 15px;
                    font-family: 'Helvetica Neue';
                }
                &:hover {
                    color: $red;
                }

                &.active {
                    color: $red;
                    pointer-events: none;
                }
            }
            .logout-mobile{
                display: inline;
                width: max-content;
                border: 0;
                outline: 0;
                background: none;
                color: $dark-gray;
                font-size: 20px;
                margin-top: 30px;

                &:hover {
                    color: $red;
                }
            }
        }
    }

    @media only screen and (max-width: 1200px) {
        .header-wrapper {
            position: fixed;
            width: 100%;
            top: 0;

            .logo-wrapp {
                height: 50px;
                overflow: hidden;
                border-bottom: 1px solid $dark-gray;

                &.dekstop {
                    display: none !important;
                }
                &.mobile {
                    display: grid;
                }

                img {
                    height: 60px;
                    margin-top: -6px;
                }
            }

            .links-wrapper {
                display: none;
            }

            .mobile-underheader {
                display: grid;
                place-items: center;
            }
        }

        #mobile-menu {
            display: block;
        }
    }

